# libclangpp

./: CMakeLists.txt  LICENSE  README.md  clangpp.h  generate.py
cmake/: BCMTest.cmake  clang.cmake  clangpp-config.cmake
include/: clangpp.hpp
test/: basic.cpp  example.cpp
